<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor1"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/statBar1"
        android:text="@string/title"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:fontFamily="helvetica"
        android:textStyle="bold"
        android:letterSpacing=".75"

        />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="80dp"
        android:textSize="15sp"
        android:fontFamily="helvetica"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/desc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="155dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="helvetica"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:text="@string/description1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/fajr_button"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        style="@style/button_text"
        android:background="@drawable/red_button"
        android:text="@string/fajr"
        android:layout_below="@id/desc1"
        />
    <Button
        android:id="@+id/zuhr_button"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        style="@style/button_text"
        android:background="@drawable/red_button"
        android:text="@string/zuhr"
        android:layout_below="@id/fajr_button"
        />
    <Button
        android:id="@+id/asr_button"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        style="@style/button_text"
        android:background="@drawable/red_button"
        android:text="@string/asr"
        android:layout_below="@id/zuhr_button"
        />
    <Button
        android:id="@+id/magrhib_button"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        style="@style/button_text"
        android:background="@drawable/red_button"
        android:text="@string/magrhib"
        android:layout_below="@id/asr_button"
        />
    <Button
        android:id="@+id/isha_button"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        style="@style/button_text"
        android:background="@drawable/red_button"
        android:text="@string/isha"
        android:layout_below="@id/magrhib_button"
        />



</RelativeLayout>
